[project]
name = "deep-search-langgraph"
version = "0.1.0"
description = ""
authors = [
    {name = "Massimo Da Ros",email = "massimo.daros@nttdata.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph (>=0.6.6,<0.7.0)",
    "langchain-core (>=0.3.74,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-google-genai (>=2.1.9,<3.0.0)"
]

[tool.poetry]
packages = [{include = "deep_search_langgraph", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
